kubernetes_files/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: service2-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: greeting-service2:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
