kubernetes_files/service3-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: service3-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: service3

  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
        - name: service3
          image: greeting-service3:1.0

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
