kubernetes_files/service2-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service-2

spec:
  type: ClusterIP

  selector:
    app: service2

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
