kubernetes_files/service3-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service-3

spec:
  type: ClusterIP

  selector:
    app: service3

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
