kubernetes_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: greeting-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-2
                port:
                  number: 8080

          # React frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
